Hilfetext einblenden und wieder schliessen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
 </head>
 <body>
+
+  <dialog id="hilfetext">
+    <H1>Hilfe</H1>
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    <button id="closeHilfetext">Close</button>  
+  </dialog>
+
   <form id="vornoten">
     <fieldset>
       <legend>Vornoten</legend>
@@ -63,6 +70,8 @@
   <button onclick="reverseCalculate()">Reverse</button>
 
   <button onclick="reset()">Reset</button>
+
+  <button id="openHilfetext">Hilfe</button>
 
 </body>
 
