ReadMe File und Texte ergänzt

--- a/index.html
+++ b/index.html
@@ -18,6 +18,31 @@
     <button id="closeHilfetext">Close</button>  
   </dialog>
 
+  <dialog id="hinweistext">
+    <H1>Hinweis</H1>
+    <p>Die Inhalte des Notenrechners wurden mit grösstmöglicher Sorgfalt und nach bestem Gewissen erstellt. Dennoch übernimmt das Laufbahnzentrum keine Gewähr für die Aktualität, Vollständigkeit und Richtigkeit der bereitgestellten Inhalte.</p>
+    <button id="closeHinweis">Close</button>  
+  </dialog>
+
+  <dialog id="gymnasiumtext">
+    <H1>Gymnasium</H1>
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    <button id="closeHilfetext">Close</button>  
+  </dialog>
+
+  <dialog id="handelsschule">
+    <H1>Handelsschule</H1>
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    <button id="closeHilfetext">Close</button>  
+  </dialog>
+
+  <dialog id="lehre">
+    <H1>Lehre</H1>
+    <p>Sind deine Vornoten zu knapp? Kein Problem - eine Lehre ist eine attraktive Alternative. Dein*e Berufsberater*in berät dich gerne dazu im Laufbahnzentrum oder in deiner Schulhaussprechstunde.</p>
+    <button id="closeHilfetext">Close</button>  
+  </dialog>
+
+
   <form id="vornoten">
     <fieldset>
       <legend>Vornoten</legend>
@@ -71,7 +96,11 @@
 
   <button onclick="reset()">Reset</button>
 
+  <button id="openHinweis">Hinweis</button>
+
   <button id="openHilfetext">Hilfe</button>
+
+  <a href="readme.txt">Version 0.1.3</a>
 
 </body>
 
