--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
 
   <button id="openHilfetext">Hilfe</button>
 
-  <a href="readme.txt">Version 0.1.3</a>
+  
+  <input type="checkbox" id="windowhide">
+  <label for="windowhide"> Fenster Verstecken</label>
+
+  <a href="readme.txt">Version 0.1.4.1</a>
 
 </body>
 
