--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 </head>
 <body>
 
+  <!-- Header Banner -->
+
+  <div class="nav-banner">
+    <span class="badge text-bg-info"><a href="readme.txt" class="link-dark">v0.1.5.3</a></span>
+  </div>
+
+  
+
   <!-- Header -->
 
   <nav class="navbar navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
@@ -36,8 +44,6 @@
         <button class="btn btn-outline-danger" onclick="reset()">Reset</button>
         <button class="btn btn-outline-info" id="openHinweistext">Hinweis</button>
         <button class="btn btn-outline-info" id="openHilfetext">Hilfe</button>
-
-        <span class="badge text-bg-info"><a href="readme.txt" class="link-dark">v0.1.5.2</a></span>
     </div>
   </nav>
 
