--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <!-- ############ Header Banner ############ -->
 
   <div class="nav-banner">
-    <span class="badge text-bg-info"><a href="readme.txt" class="link-dark">v0.1.5.4</a></span>
+    <span class="badge text-bg-info"><a href="readme.txt" class="link-dark">v0.1.5.4.1</a></span>
   </div>
 
   
 
-  <!-- ############ Header ############ -->
+  <!-- ############ Header ############ --> 
 
   <nav class="navbar navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
     <div class="container-fluid">
@@ -80,12 +80,16 @@
 
   <div class="offcanvas-body">
 
-    <h3>Über</h3>
+    <h3><i class="bi bi-house-door-fill"></i> Über</h3>
 
-    <button class="btn btn-outline-info" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarHilfe">Hilfe</button><br>
-    <button class="btn btn-outline-info" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarHinweis">Hinweis</button>
+    <button class="btn btn-outline-info" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarHilfe"><i class="bi bi-info-circle-fill"></i> Hilfe</button><br>
+    <button class="btn btn-outline-info" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarHinweis"><i class="bi bi-bell-fill"></i> Hinweis</button>
 
-    <h3>Ziele</h3>
+    <hr>
+
+    <h3><i class="bi bi-bullseye"></i> Ziele</h3>
+
+    <p>Bestimme was du erreichen möchtest</p>
 
     <div class="form-check">
       <input class="form-check-input" type="radio" name="radioButtonClass" id="radioFrei" value="">
@@ -108,7 +112,9 @@
 
     <button class="btn btn-primary" onclick="radioButtonSchnitt()">Akt.</button>
 
-    <h3>Fenster Optionen</h3>
+    <hr>
+
+    <h3><i class="bi bi-window"></i> Fenster Optionen</h3>
 
     <div class="form-check form-switch">
       <input class="form-check-input" type="checkbox" role="switch" id="windowhide">
