--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 <div class="offcanvas offcanvas-end text-bg-dark" id="sidebarHilfe">
   <div class="offcanvas-header">
-    <h1 class="offcanvas-title">So funktionierts</h1>
+    <h1 class="offcanvas-title">So funktioniert`s</h1>
     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
   </div>
 
@@ -149,29 +149,28 @@
 
   <div class="offcanvas-body">
 
-    <h2>Einfaches Rechnen</h2>
+    <h2>Gesamtnote berechnen</h2>
 
-    <p>Du kannst ganz einfach deine Gesammtnoten ermitteln, indem du in den einzelnen Eingabefelder deine Note eingibst.
-      Bei den Vorleistungsnoten kannst du einfach dein letztes Zeugnis zurhand nehmen und diese Noten 1:1 eingeben.
-    </p>
+    <ol>
+      <li>Tippe deine Vorleistungsnoten ein (= 1. Zeugnis der 2. Sek. Wenn du dieses noch nicht hast, gibst du deine geschätzten Noten ein).</li>
+      <li>Schätze deine Prüfungsnoten und tippe sie ein.</li>
+      <li>Mit tippen auf "Berechnen" wird deine "Gesamtnote" angezeigt.</li>
+      <li>Du kannst nun einzelne Noten verändern und die Gesamtnote neu berechnen.</li>
+      <li>Mit tippen auf "Reset" kannst du alle Noten löschen.</li>
+    </ol>
 
-    <p>
-      Bei den Pürfungsnote musst du dich einschätzen, welche Note du erreichen wirst.
-      Danach klicke auf "Berechnen" und der Notenrechner errechnet dir deine Gesamtnote.
-    </p>
+    <h2>Rückwärts rechnen</h2>
 
-    <h2>Rückwärts Rechnen</h2>
-
-    <p>Der Notenrechner kann auch "rückwärts" Rechnen. Das bedeutet, du kannst zb deine Ziel-Gesamtnote einngeben. Nun fülle alle anderen Felder aus, bis auf eines.</p>
-    
-    <p>Nun kannst du errechnen, was du für eine Note haben müsstest, damit du diesen Gesammtnote erreichen kannst</p>
-
-    <p>Sollte die Note "rot" erscheinen und über einer 6 liegen, so kannst du dein Ziel nicht mehr erreichen. Stecke daher das Ziel etwas niedriger und versuche es nochmals</p>
+    <ol>
+      <li>Gib eine Gesamtnote ein.</li>
+      <li>Fülle dann alle anderen Felder aus, ausser jenes, das du berechnen willst (z.B. "Mathematik" leer lassen).</li>
+      <li>Mit tippen auf "Berechnen" wird deine "Vorleistungsnote Mathematik" angezeigt.</li>
+      <li>Mit tippen auf "Reset" kannst du alle Noten löschen.</li>
+    </ol>
 
     <h2>So setzen sich die Noten zusammen</h2>
 
-    <p>Hier siehst du eine kleine Grafik wie sich die Noten zusammen Zählen bzw wie die Gewichtung ist der einzelnen Noten.
-      Klicke <a href="https://excalidraw.com/#json=viRLu95rLG8g3X8RrErS9,f6ijsgaUHMFybxX1vZoQfw" class="link-info" target="_blank">HIER</a> um die Grafik zu vergrössern.
+    <p>Auf der Grafik siehst du, wie die einzelnen Noten gewichtet werden. Klicke <a href="https://excalidraw.com/#json=viRLu95rLG8g3X8RrErS9,f6ijsgaUHMFybxX1vZoQfw" class="link-info" target="_blank">HIER</a>, um die Grafik zu vergrössern.
     </p>
 
     <img src="resources/grafik/Notenberechnung-dark.png" class="img-fluid">
