--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-  <!-- ############ Header Banner ############ -->
+  <!-- ############ Header LBZ Banner ############ -->
 
   <div class="nav-banner">
     <img src="resources/logo/logo_stzh_lbz_rgb_blau_digital.svg" height="48px">
@@ -32,15 +32,15 @@
 
   <!-- ############ Header ############ --> 
 
-  <nav class="navbar navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
+  <nav class="navbar navbar bg-dark border-bottom border-bottom-dark sticky-top" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img class="nav-img" src="resources/templates/notenrechner-fav.png" width="32px">
         LBZ ZAP 2-Notenrechner
       </a>
        <!-- Buttons -->
-        <button class="btn btn-primary" onclick="calculate()">Berechnen</button>
-        <button class="btn btn-outline-danger" onclick="reset()">Reset</button>
+        <button class="btn btn-primary" onclick="calculate()"><i class="bi bi-calculator-fill"></i> Berechnen</button>
+        <button class="btn btn-outline-danger" onclick="reset()"><i class="bi bi-arrow-clockwise"></i> Reset</button>
 
         <!-- Button to open the offcanvas sidebar -->
         <button class="btn btn-outline-info" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarCanvas"><i class="bi bi-gear-fill"></i></button>
@@ -80,7 +80,7 @@
 <div class="offcanvas offcanvas-end text-bg-dark" id="sidebarCanvas">
   <div class="offcanvas-header">
     <h1 class="offcanvas-title">Optionen</h1> 
-    <span class="badge text-bg-info"><a href="readme.txt" class="link-dark">v0.1.7 X-1</a></span>
+    <span class="badge text-bg-info"><a href="readme.txt" class="link-dark">v0.1.8 X-1</a></span>
     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
   </div>
 
@@ -95,31 +95,6 @@
 
     <hr>
 
-    <h3><i class="bi bi-bullseye"></i> Ziele</h3>
-
-    <p>Bestimme was du erreichen möchtest</p>
-
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="radioButtonClass" id="radioFrei" value="" onchange="zielChanged();" >
-      <label class="form-check-label" for="radioFrei">
-        Ziel Frei
-      </label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="radioButtonClass" id="radioHMS" value="4.5" onchange="zielChanged();" >
-      <label class="form-check-label" for="radioHMS">
-        Ziel HMS
-      </label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="radioButtonClass" id="radioGym" value="4.75" onchange="zielChanged();">
-      <label class="form-check-label" for="radioGym">
-        Ziel Gymnasium
-      </label>
-    </div>
-
-    <hr>
-
     <h3><i class="bi bi-window"></i> Fenster Optionen</h3>
 
     <div class="form-check form-switch">
@@ -131,8 +106,7 @@
 
     <h5><i class="bi bi-hand-thumbs-up-fill"></i> Support us on</h5>
 
-    <a href="https://github.com/Thund3rBirdCH/LBZ-Notenrechner" target="_blank"><h4><i class="bi bi-github"> GitHub</i></h4></a>
-
+    <a href="https://github.com/Thund3rBirdCH/LBZ-Notenrechner" target="_blank" class="link-light"><h4><i class="bi bi-github"> GitHub</i></h4></a>
 
   </div>
 </div>
@@ -170,12 +144,12 @@
 
     <h2>So setzen sich die Noten zusammen</h2>
 
-    <p>Auf der Grafik siehst du, wie die einzelnen Noten gewichtet werden. Klicke <a href="https://excalidraw.com/#json=viRLu95rLG8g3X8RrErS9,f6ijsgaUHMFybxX1vZoQfw" class="link-info" target="_blank">HIER</a>, um die Grafik zu vergrössern.
+    <p>Auf der Grafik siehst du, wie die einzelnen Noten gewichtet werden. Klicke auf das Bild um die Grafik zu vergrössern.
     </p>
 
-    <img src="resources/grafik/Notenberechnung-dark.png" class="img-fluid">
-
-    
+    <a href="resources/grafik/Notenberechnung-dark.png" data-toggle="lightbox" target="_blank">
+      <img src="resources/grafik/Notenberechnung.png" class="img-fluid">
+    </a>
 
   </div>
 </div>
@@ -215,6 +189,59 @@
 
   </div>
 </div>
+
+<div class="container color" >
+  <div class="row">
+    <div class="col-md-6">
+
+      <!-- ############ Ziele  ############ -->
+
+      <h4><i class="bi bi-bullseye"></i> Ziele</h4>
+
+        <p>Bestimme welches Ziel du erreichen möchtest</p>
+
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="radioButtonClass" id="radioFrei" value="" onchange="zielChanged();" >
+            <label class="form-check-label" for="radioFrei">
+              Definiere dein Ziel selber
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="radioButtonClass" id="radioHMS" value="4.5" onchange="zielChanged();" >
+            <label class="form-check-label" for="radioHMS">
+              Ziel Handelsmittelschule
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="radioButtonClass" id="radioGym" value="4.75" onchange="zielChanged();">
+            <label class="form-check-label" for="radioGym">
+              Ziel Gymnasium
+            </label>
+          </div>
+
+    </div>
+  </div>
+
+  <hr>
+
+</div>
+
+
+<!-- ############ Boostrap Toast ############-->
+
+<div class="toast show">
+  <div class="toast-header">
+    <img src="resources/favicon/favicon-16x16.png" class="rounded me-2" alt="...">
+    <strong class="me-auto">Wie funktionierts</strong>
+    <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+  </div>
+  <div class="toast-body">
+    <p>Weist du schon wie der ZAP 2-Notenrechner funktionier?</p>
+    <button class="btn btn-outline-info" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarHilfe"><i class="bi bi-info-circle-fill"></i> So funktionierts</button>
+  </div>
+</div>
+
+
 
 
 <!-- ############ Wrapper um Eingabefelder ############-->
@@ -397,34 +424,11 @@
     </form>
   </div> <!-- End Col Ganze Breite-->
 </div> <!-- End ROW-->
-
-<hr>
-
-<h4><i class="bi bi-bullseye"></i> Ziele</h4>
-
-<p>Bestimme welches Ziel du erreichen möchtest</p>
-
-<div class="form-check">
-  <input class="form-check-input" type="radio" name="radioButtonClass" id="radioFrei" value="" onchange="zielChanged();" >
-  <label class="form-check-label" for="radioFrei">
-    Ziel Frei
-  </label>
-</div>
-<div class="form-check">
-  <input class="form-check-input" type="radio" name="radioButtonClass" id="radioHMS" value="4.5" onchange="zielChanged();" >
-  <label class="form-check-label" for="radioHMS">
-    Ziel HMS
-  </label>
-</div>
-<div class="form-check">
-  <input class="form-check-input" type="radio" name="radioButtonClass" id="radioGym" value="4.75" onchange="zielChanged();">
-  <label class="form-check-label" for="radioGym">
-    Ziel Gymnasium
-  </label>
-</div>
 </div> <!-- End Container-->
   
   <div id="message-container"></div>
+
+<!-- ############ Footer ############ -->
 
 <div class="footer">
   <div class="container">
@@ -433,7 +437,10 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <img src="resources/favicon/favicon-32x32.png">
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">Stadt Zürich Laufbahnzentrum / GameInvaders</span>
+        <span class="mb-3 mb-md-0 text-body-secondary">
+          Stadt Zürich Laufbahnzentrum <br>
+          GameInvaders
+        </span>
       </div>
   
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
@@ -446,34 +453,11 @@
 </div>
 
 
- <!-- ############ Footer - Mobile ############ -->
-
- <div class="footer-mobile">
-  <nav class="navbar navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
-    <div class="container-fluid">
-      <div class="container text-center">
-        <div class="row align-items-start">
-          <div class="col">
-            <button class="btn btn-primary" onclick="calculate()">Berechnen</button>
-          </div>
-          <div class="col">
-            <button class="btn btn-outline-danger" onclick="reset()">Reset</button>
-          </div>
-          <div class="col">
-            One of three columns
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
-</div>
-
-
-
 </body>
 
 <script src="script.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
 
 </html>
