--- a/index.html
+++ b/index.html
@@ -198,24 +198,27 @@
 
       <h4><i class="bi bi-bullseye"></i> Ziele</h4>
 
-        <p>Bestimme welches Ziel du erreichen möchtest</p>
+        <p>Bestimme, welches Ziel du erreichen möchtest</p>
 
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="radioButtonClass" id="radioFrei" value="" onchange="zielChanged();" >
-            <label class="form-check-label" for="radioFrei">
-              Definiere dein Ziel selber
+            <input class="form-check-input" type="radio" name="radioButtonClass" id="radioGym" value="4.75" onchange="zielChanged();">
+            <label class="form-check-label" for="radioGym">
+              Ziel Gymnasium
             </label>
           </div>
+
           <div class="form-check">
             <input class="form-check-input" type="radio" name="radioButtonClass" id="radioHMS" value="4.5" onchange="zielChanged();" >
             <label class="form-check-label" for="radioHMS">
               Ziel Handelsmittelschule
             </label>
           </div>
+
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="radioButtonClass" id="radioGym" value="4.75" onchange="zielChanged();">
-            <label class="form-check-label" for="radioGym">
-              Ziel Gymnasium
+            <input class="form-check-input" type="radio" name="radioButtonClass" id="radioFrei" value="" onchange="zielChanged();" >
+            <label class="form-check-label" for="radioFrei">
+              Gib die Gesammtnote ein, die du erreichen willst <br>
+              oder lasse diese Berechnen
             </label>
           </div>
 
@@ -394,7 +397,6 @@
     </div> <!-- End Col Rechts-->
   </div> <!-- End ROW-->
 </div> <!-- End Container-->
-
 
 <div class="container">
   <div class="row">
